--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list_inride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list_inride.xml
@@ -74,6 +74,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
+            <RelativeLayout
+                android:id="@+id/relativeLayoutLoading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewCashReq"
+                android:layout_marginTop="4px">
+
+                <ImageView
+                    android:id="@+id/imageViewLoadingIcon"
+                    android:background="@drawable/unloading_icon_copy"
+                    android:layout_width="26px"
+                    android:layout_height="26px"/>
+
+                <TextView
+                    android:id="@+id/textViewUnLoading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="28px"
+                    android:layout_toRightOf="@+id/imageViewLoadingIcon"
+                    android:layout_marginLeft="8px"
+                    android:text="@string/loading_req"/>
+
+            </RelativeLayout>
+
         </RelativeLayout>
 
         <RelativeLayout
