--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_single_fare_view.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_single_fare_view.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
+              android:id="@+id/linearLayoutRoot"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/white"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
         android:layout_marginLeft="10px"
-        android:layout_height="40dp">
+        android:layout_height="60px">
 
         <TextView
             android:id="@+id/left_text_view"
@@ -20,7 +21,7 @@
             android:textColor="@color/grey_ticket_history"
             android:gravity="center_vertical"
             android:text="@string/NA"
-            android:textSize="24px" />
+            android:textSize="28px" />
 
         <TextView
             android:id="@+id/right_text_view"
@@ -31,7 +32,7 @@
             android:textColor="@color/grey_ticket_history"
             android:text="@string/NA"
             android:gravity="center_vertical"
-            android:textSize="24px" />
+            android:textSize="28px" />
 
     </RelativeLayout>
 
