--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_orange_top_rounded_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_orange_top_rounded_bordered.xml
@@ -4,11 +4,11 @@
 
     <solid android:color="@color/red_v2"/>
     <corners
-        android:topLeftRadius="3px"
-        android:topRightRadius="3px"/>
+        android:topLeftRadius="10px"
+        android:topRightRadius="10px"/>
     <stroke
         android:width="1px"
-        android:color="@color/red_v2"
+        android:color="#aa7e7d78"
     />
 
 </shape>
