--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -194,7 +194,7 @@
             <ListView
                 android:id="@+id/driverRideRequestsList"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/topRlOuter"
                 android:divider="@color/transparent"
                 android:background="@color/black_translucent"
