--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_item_recharge_type.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_item_recharge_type.xml
@@ -4,7 +4,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:animateLayoutChanges="true">
 
         <TextView
             android:id="@+id/tv_recharge_type"
@@ -14,7 +15,6 @@
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="@string/visit_office"
             android:textSize="@dimen/text_size_16_sp" />
 
         <LinearLayout
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="match_parent"
