--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -483,21 +483,23 @@
 
                 <ImageView
                     android:id="@+id/imageViewWalletBalance"
-                    android:layout_width="36px"
-                    android:layout_height="31px"
+                    android:layout_width="56px"
+                    android:layout_height="56px"
                     android:layout_marginLeft="54px"
                     android:layout_marginRight="26px"
-                    android:layout_marginTop="12px"
-                    android:src="@drawable/ride_history_icon" />
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/wallet_balance" />
 
 
                 <TextView
                     android:id="@+id/textViewWalletBalance"
                     android:layout_width="wrap_content"
-                    android:layout_height="55px"
+                    android:layout_height="wrap_content"
                     android:layout_toRightOf="@+id/imageViewWalletBalance"
                     android:gravity="center_vertical"
+                    android:layout_centerVertical="true"
                     android:text="@string/wallet_balance"
+                    android:textAllCaps="true"
                     android:textColor="@color/black_text_v2"
                     android:textSize="36px" />
 
@@ -507,16 +509,17 @@
                     android:layout_width="23px"
                     android:layout_height="21px"
                     android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="48px"
-                    android:layout_marginTop="14px"
                     android:src="@drawable/arrow_thick_new" />
 
                 <TextView
                     android:id="@+id/textViewWalletBalanceAmount"
                     android:layout_width="wrap_content"
-                    android:layout_height="55px"
+                    android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/wallet_arrow"
                     android:gravity="center_vertical|right"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="20px"
                     android:textColor="@color/black_text_v2"
                     android:textSize="20px" />
