--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_transaction_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_transaction_item.xml
@@ -1,95 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relative">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
+        android:id="@+id/relative"
+        android:layout_width="match_parent"
+        android:layout_height="79dp"
+        android:splitMotionEvents="false">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="79dp"
-            android:splitMotionEvents="false">
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/right_layout"
+            android:gravity="center_vertical"
+            android:orientation="vertical"
+            android:paddingLeft="25dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/right_layout"
-                android:gravity="center_vertical"
-                android:paddingLeft="25dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewTransactionDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:text="27 Feb, 2015"
-                    android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_16_sp" />
-
-                <TextView
-                    android:id="@+id/textViewTransactionTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:text="12:00 PM"
-                    android:layout_marginTop="3dp"
-                    android:textColor="@color/text_color_light"
-                    android:textSize="13.5sp" />
-
-                <TextView
-                    android:id="@+id/tv_payment_type"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="center_vertical"
-                    android:text="Office Recharge"
-                    android:layout_marginTop="3dp"
-                    android:textColor="@color/text_color_light"
-                    android:textSize="11sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/right_layout"
+            <TextView
+                android:id="@+id/textViewTransactionDate"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:text="27 Feb, 2015"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_16_sp" />
+
+            <TextView
+                android:id="@+id/textViewTransactionTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="3dp"
+                android:text="12:00 PM"
+                android:textColor="@color/text_color_light"
+                android:textSize="13.5sp" />
+
+            <TextView
+                android:id="@+id/tv_payment_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="3dp"
+                android:text="Office Recharge"
+                android:textColor="@color/text_color_light"
+                android:textSize="11sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/right_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="28dp"
+            android:gravity="center_vertical|right"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textViewTransactionAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:gravity="center_vertical|right"
-                android:layout_marginRight="28dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewTransactionAmount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="Rs. 100"
-                    android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_size_16_sp" />
+                android:layout_centerVertical="true"
+                android:text="Rs. 100"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_16_sp" />
 
 
-                <TextView
-                    android:id="@+id/textViewTransactionType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:text="Cash Added"
-                    android:textColor="@color/text_color_light"
-                    android:textSize="11sp" />
+            <TextView
+                android:id="@+id/textViewTransactionType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="Cash Added"
+                android:textColor="@color/text_color_light"
+                android:textSize="11sp" />
 
-            </LinearLayout>
+        </LinearLayout>
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@color/stroke_color_light" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:background="@color/stroke_color_light" />
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 </layout>
