--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/toolbar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/toolbar.xml
@@ -9,7 +9,7 @@
         <RelativeLayout
             android:id="@+id/relativeLayoutTop"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="56dp"
             android:background="@color/black_top_bar_bg"
             android:splitMotionEvents="false">
 
@@ -23,10 +23,14 @@
 
             <TextView
                 android:id="@+id/textViewTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="52dp"
+                android:layout_toRightOf="@+id/buttonBack"
+                android:singleLine="true"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
         </RelativeLayout>
