--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -95,6 +95,68 @@
                     android:background="@color/grey_light_seprator" />
 
                 <RelativeLayout
+                    android:id="@+id/relativeLayoutWallet"
+                    android:layout_width="match_parent"
+                    android:layout_height="152px"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/bg_transparent_blue_black_selector"
+                    android:gravity="center_vertical">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewWalletBalance"
+                        android:layout_width="56px"
+                        android:layout_height="56px"
+                        android:layout_marginLeft="26px"
+                        android:layout_marginRight="26px"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/wallet_balance" />
+
+
+                    <TextView
+                        android:id="@+id/textViewWalletBalance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/imageViewWalletBalance"
+                        android:gravity="center_vertical"
+                        android:layout_centerVertical="true"
+                        android:text="@string/wallet_balance"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="36px" />
+
+
+                    <ImageView
+                        android:id="@+id/wallet_arrow"
+                        android:layout_width="23px"
+                        android:layout_height="21px"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="48px"
+                        android:src="@drawable/arrow_thick_new" />
+
+                    <TextView
+                        android:id="@+id/textViewWalletBalanceAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/wallet_arrow"
+                        android:gravity="center_vertical|right"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="20px"
+                        android:textColor="@color/white"
+                        android:text="--"
+                        android:textSize="20px" />
+
+
+                </RelativeLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/grey_light_seprator" />
+
+                <RelativeLayout
                     android:id="@+id/relativelayoutChart"
                     android:layout_width="match_parent"
                     android:layout_height="448px"
@@ -473,16 +535,17 @@
                 android:background="@drawable/background_divider_drawable"/>
 
             <RelativeLayout
-                android:id="@+id/relativeLayoutWallet"
+                android:id="@+id/relativeLayoutNefy"
                 android:layout_width="match_parent"
                 android:layout_height="152px"
+                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/list_white_selector"
                 android:gravity="center_vertical">
 
 
                 <ImageView
-                    android:id="@+id/imageViewWalletBalance"
+                    android:id="@+id/imageViewNefy"
                     android:layout_width="56px"
                     android:layout_height="56px"
                     android:layout_marginLeft="54px"
@@ -492,20 +555,20 @@
 
 
                 <TextView
-                    android:id="@+id/textViewWalletBalance"
+                    android:id="@+id/textViewNefy"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/imageViewWalletBalance"
+                    android:layout_toRightOf="@+id/imageViewNefy"
                     android:gravity="center_vertical"
                     android:layout_centerVertical="true"
-                    android:text="@string/wallet_balance"
+                    android:text="Neft Pending"
                     android:textAllCaps="true"
                     android:textColor="@color/black_text_v2"
                     android:textSize="36px" />
 
 
                 <ImageView
-                    android:id="@+id/wallet_arrow"
+                    android:id="@+id/nefy_arrow"
                     android:layout_width="23px"
                     android:layout_height="21px"
                     android:layout_alignParentRight="true"
@@ -514,16 +577,16 @@
                     android:src="@drawable/arrow_thick_new" />
 
                 <TextView
-                    android:id="@+id/textViewWalletBalanceAmount"
+                    android:id="@+id/textViewNefyAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/wallet_arrow"
+                    android:layout_toLeftOf="@+id/nefy_arrow"
                     android:gravity="center_vertical|right"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="20px"
                     android:textColor="@color/black_text_v2"
                     android:text="--"
-                    android:textSize="20px" />
+                    android:textSize="36px" />
 
 
             </RelativeLayout>
