--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -9,11 +9,22 @@
     android:splitMotionEvents="false"
     android:visibility="visible">
 
+    <TextView
+        android:id="@+id/end_ride_custom_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="20px"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size_36"
+        />
 
     <ScrollView
         android:id="@+id/scrollViewEndRide"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/end_ride_custom_text">
 
         <!-- End ride linearLayout-->
         <LinearLayout
@@ -622,5 +633,7 @@
         </LinearLayout>
 
     </ScrollView>
+
+
 
 </RelativeLayout>
