fair_caching_changes: wait time reset case also handled along with distance reset

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -835,6 +835,8 @@
         <!--android:layout_marginBottom="20px"-->
         <!--android:layout_marginLeft="160px"-->
         <!--android:background="@drawable/new_my_loc_button"-->
+        <!--android:text="R"-->
+        <!--android:textSize="50px"-->
         <!--android:tag="mwar"-->
         <!--/>-->
 
