feat_subscription_plan: available plans & active plans layout done with api

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -436,6 +436,35 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/relativeLayoutPlans"
+                android:layout_width="match_parent"
+                android:layout_height="84px"
+                android:background="@drawable/background_tranparend_red_v2_selector"
+                android:splitMotionEvents="false">
+
+                <ImageView
+                    android:id="@+id/ivJugnooPlans"
+                    android:layout_width="56px"
+                    android:layout_height="37px"
+                    android:layout_marginLeft="20px"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_driver_resources"
+                    android:tag="mwar"/>
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewPlans"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48px"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/ivJugnooPlans"
+                    android:layout_marginLeft="8px"
+                    android:text="@string/plans"
+                    android:textColor="@color/white"
+                    android:textSize="36px"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/relativeLayoutSupport"
                 android:layout_width="match_parent"
                 android:layout_height="84px"
