--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
@@ -56,13 +56,13 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_width="wrap_content"
-    android:textSize="16sp"
+    android:textSize="18sp"
     android:textColor="@color/black"
     android:gravity="center"
    android:visibility="gone"
     android:text="In last 24 hours if not availed eqwe qwewqe wqqwqw qqwqqw"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="20dp"
     app:layout_constraintTop_toBottomOf="@id/layout_top_bar"/>
 
 
@@ -101,10 +101,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:text="Savings : 3123"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         android:layout_width="wrap_content"
         android:textSize="17sp"
         android:visibility="gone"
+        android:gravity="center"
         android:textColor="@color/new_orange"
         android:layout_height="wrap_content" />
 
@@ -112,7 +113,7 @@
 
     <TextView
         android:id="@+id/label_outstanding"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@id/label_savings"
         android:paddingLeft="30dp" android:paddingRight="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -120,6 +121,7 @@
         android:text="Current Outstanding : 3123"
         android:layout_width="wrap_content"
         android:textSize="17sp"
+        android:gravity="center"
         android:visibility="gone"
         android:textColor="@color/new_orange"
         android:layout_height="wrap_content" />
