--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_jugnoo_subscription.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -47,11 +48,7 @@
     </android.support.constraint.ConstraintLayout>
 
 
-
-
-
-
-  <TextView
+    <TextView
     android:id="@+id/info_text"
     android:paddingLeft="30dp" android:paddingRight="30dp"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -104,7 +101,7 @@
         android:text="Savings : 3123"
         android:layout_marginTop="35dp"
         android:layout_width="wrap_content"
-        android:textSize="17sp"
+        android:textSize="20sp"
         android:visibility="gone"
         android:gravity="center"
         android:textColor="@color/new_orange"
@@ -119,9 +116,9 @@
         android:paddingLeft="30dp" android:paddingRight="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Current Outstanding : 3123"
+        tools:text="Current Outstanding : 3123"
         android:layout_width="wrap_content"
-        android:textSize="17sp"
+        android:textSize="18sp"
         android:gravity="center"
         android:visibility="gone"
         android:textColor="@color/new_orange"
