--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
@@ -197,34 +197,35 @@
             <!--android:layout_marginTop="24px"-->
             <!--android:background="@color/grey_light"/>-->
 
-       <RelativeLayout
+       <LinearLayout
+           android:orientation="vertical"
            android:layout_width="match_parent"
-           android:layout_height="98px"
-           android:background="@color/grey_ride_detail_bg"
+           android:layout_height="wrap_content"
            android:gravity="center">
 
         <TextView
             android:id="@+id/textViewTripsText"
-            android:layout_width="620px"
-            android:layout_height="45px"
+            android:layout_width="match_parent"
+            android:layout_height="98px"
+            android:background="@color/grey_ride_detail_bg"
             android:gravity="center_vertical"
-            android:layout_marginTop="24px"
+            android:paddingLeft="50px"
             android:text="@string/trips"
             android:textColor="@color/grey_ride_detail"
             android:textSize="30px"/>
+           <TextView
+               android:id="@+id/textViewNoData"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:gravity="center"
+               android:layout_marginTop="30px"
+               android:text="@string/no_rides_currently"
+               android:textColor="@color/grey_ride_detail"
+               android:textSize="30px"/>
+
+       </LinearLayout>
 
 
-       </RelativeLayout>
 
-
-    <TextView
-        android:id="@+id/textViewNoData"
-        android:layout_width="620px"
-        android:layout_height="45px"
-        android:gravity="center"
-        android:layout_marginTop="30px"
-        android:text="@string/no_rides_currently"
-        android:textColor="@color/grey_ride_detail"
-        android:textSize="30px"/>
 
 </LinearLayout>
