--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_total_vlaues.xml
@@ -196,36 +196,5 @@
             <!--android:layout_height="2px"-->
             <!--android:layout_marginTop="24px"-->
             <!--android:background="@color/grey_light"/>-->
-
-       <LinearLayout
-           android:orientation="vertical"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:gravity="center">
-
-        <TextView
-            android:id="@+id/textViewTripsText"
-            android:layout_width="match_parent"
-            android:layout_height="98px"
-            android:background="@color/grey_ride_detail_bg"
-            android:gravity="center_vertical"
-            android:paddingLeft="50px"
-            android:text="@string/trips"
-            android:textColor="@color/grey_ride_detail"
-            android:textSize="30px"/>
-           <TextView
-               android:id="@+id/textViewNoData"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:gravity="center"
-               android:layout_marginTop="30px"
-               android:text="@string/no_rides_currently"
-               android:textColor="@color/grey_ride_detail"
-               android:textSize="30px"/>
-
-       </LinearLayout>
-
-
-
-
+    <!--<include layout="@layout/list_item_trips_heading" />-->
 </LinearLayout>
