feat_captive_driver: trip header fix for invoice api

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -312,6 +312,8 @@
                 android:layout_gravity="center"
                 android:orientation="vertical">
 
+
+                <!--<include layout="@layout/list_item_trips_heading"/>-->
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_earnings_per_day"
                     android:layout_width="match_parent"
