feat_captive_driver: Label added for earnings screen

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_new_earnings.xml
@@ -313,7 +313,7 @@
                 android:orientation="vertical">
 
 
-                <!--<include layout="@layout/list_item_trips_heading"/>-->
+                <include layout="@layout/list_item_trips_heading"/>
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/list_earnings_per_day"
                     android:layout_width="match_parent"
