feat_captive_driver: key added for monthly earnings in profile screen

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -245,6 +245,8 @@
                 <!--android:background="@color/blue_btn_pressed"/>-->
 
             <RelativeLayout
+                android:id="@+id/rlMonthlyEarnings"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="120px">
 
